<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_home"
        android:checked="true"
        android:icon="@drawable/bottom_home_select_drawable"
        android:title="@string/main_home_txt"/>

    <item
        android:id="@+id/i_accompany"
        android:icon="@drawable/bottom_accompany_select_drawable"
        android:title="@string/main_accompany_txt"/>

    <item
        android:id="@+id/i_chat"
        android:icon="@drawable/bottom_chat_select_drawable"
        android:title="@string/main_chat_txt"/>
    <item
        android:id="@+id/i_dynamic"
        android:icon="@drawable/bottom_dynamic_select_drawable"
        android:title="@string/main_dynamic_txt"/>

    <item
        android:id="@+id/i_mine"
        android:icon="@drawable/bottom_mine_select_drawable"
        android:title="@string/main_mine_txt"/>
</menu>