<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <include
        android:id="@+id/complete_top_layout"
        layout="@layout/layout_top"/>


    <com.yanzhenjie.album.widget.SquareRelativeLayout
        android:id="@+id/complete_video_srl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_375"
        android:layout_below="@+id/complete_top_layout">

        <ImageView
            android:id="@+id/iv_album_content_image"
            style="@style/Album.MatchParent"
            android:contentDescription="@string/album_title"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:id="@+id/complete_update_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/comment_select_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_video"/>

            <TextView
                android:id="@+id/complete_select_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:text="@string/complete_update_video_txt"
                />
        </LinearLayout>
    </com.yanzhenjie.album.widget.SquareRelativeLayout>

    <LinearLayout
        android:id="@+id/complete_des_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/complete_video_srl"
        android:layout_marginTop="@dimen/padding_20"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/video_z_get_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_get_member_txt"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:id="@+id/view_z_m_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_get_moth_txt"
            android:textColor="@color/color_D1AE81"
            android:textSize="@dimen/text_size_15"/>

    </LinearLayout>

    <TextView
        android:id="@+id/view_z_check_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/complete_des_ll"
        android:gravity="center"
        android:text="@string/complete_look_txt"/>

    <Button
        android:id="@+id/complete_save_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_50"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/padding_20"
        android:layout_marginRight="@dimen/padding_20"
        android:layout_marginBottom="@dimen/padding_20"
        android:background="@drawable/xiyou_button_bg"
        android:text="@string/complete_submit_txt"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/text_size_18"
        />
</RelativeLayout>